# seaplane

./: .gitignore  .typos.toml  ARCHITECTURE.md  CONFIGURATION_SPEC.md  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml
crates/container-image-ref/: Cargo.toml  README.md
crates/oid/: Cargo.toml  README.md
crates/oid/examples/: basic.rs  typed.rs
crates/oid/src/: error.rs  lib.rs
seaplane/: Cargo.toml
seaplane-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
seaplane-cli/src/: api.rs  cli.rs  config.rs  context.rs  data.rs  dev.rs  error.rs  fs.rs  lib.rs  log.rs  macros.rs  main.rs  ops.rs  printer.rs
seaplane-cli/src/api/: formations.rs  locks.rs  metadata.rs  restrict.rs
seaplane-cli/src/cli/: cmds.rs  errors.rs  specs.rs  validator.rs
seaplane-cli/src/cli/cmds/: account.rs  completion.rs  config.rs  dev.rs  flight.rs  formation.rs  image.rs  init.rs  kv.rs  license.rs  locks.rs  metadata.rs  restrict.rs
seaplane-cli/src/cli/cmds/flight/: common.rs  copy.rs  create.rs  delete.rs  edit.rs  list.rs  plan.rs  template.rs
seaplane-cli/src/cli/cmds/formation/: common.rs  configuration.rs  container_stats.rs  create.rs  delete.rs  fetch.rs  land.rs  launch.rs  list.rs  load_balance.rs  plan.rs  status.rs  stop.rs  template.rs  traffic_configuration.rs
seaplane-cli/src/cli/cmds/kv/: common.rs  delete.rs  get.rs  list.rs  set.rs
seaplane-cli/src/cli/cmds/locks/: acquire.rs  common.rs  list.rs  release.rs  renew.rs
seaplane-cli/src/cli/cmds/metadata/: common.rs  delete.rs  get.rs  list.rs  set.rs
seaplane-cli/src/cli/cmds/restrict/: common.rs  delete.rs  get.rs  list.rs  set.rs
seaplane-cli/src/config/: dev.rs
seaplane-cli/src/context/: dev.rs  flight.rs  formation.rs  kv.rs  locks.rs  metadata.rs  restrict.rs
seaplane-cli/src/data/: flight.rs
seaplane-cli/src/ops/: encoded_string.rs  flight.rs  formation.rs  kv.rs  locks.rs  metadata.rs  restrict.rs
seaplane-cli/src/ops/formation/: endpoint.rs
seaplane-cli/tests/: lib.rs  ui.rs
seaplane-cli/tests/api/: account.rs  formation.rs  locks.rs  metadata.rs  mod.rs  restrict.rs
seaplane-cli/tests/ui/: mod.rs  seaplane-flight.md  seaplane-formation.md  seaplane-init.md  seaplane.md  semantic.rs  trycmd.rs
seaplane-cli/tests/ui/seaplane-flight/: copy.md  create.md  delete.md  edit.md  list.md
seaplane-cli/tests/ui/seaplane-formation/: create.md  delete.md  fetch-remote.md  land.md  launch.md  list.md
seaplane-cli/tests/ui/trycmd/: seaplane-flight.md  seaplane-formation.md  seaplane-init.md  seaplane-kv.md  seaplane-locks.md  seaplane-metadata.md  seaplane-restrict.md  seaplane-shell-completion.md  seaplane.md
seaplane-cli/tests/ui/trycmd/seaplane-flight/: copy.md  create.md  delete.md  edit.md  list.md  plan.md
seaplane-cli/tests/ui/trycmd/seaplane-formation/: create.md  delete.md  fetch-remote.md  land.md  launch.md  list.md  plan.md  status.md
seaplane-cli/tests/ui/trycmd/seaplane-kv/: delete.md  get.md  list.md  set.md
seaplane-cli/tests/ui/trycmd/seaplane-locks/: acquire.md  list.md  release.md  renew.md
seaplane-cli/tests/ui/trycmd/seaplane-metadata/: delete.md  get.md  list.md  set.md
seaplane-cli/tests/ui/trycmd/seaplane-restrict/: delete.md  get.md  list.md  set.md
seaplane-sdk/python/: .gitignore  CONTRIBUTIONS.md  README.md  noxfile.py  pyproject.toml
seaplane-sdk/python/docs/: QUICK_START.md  conf.py  index.rst  quickstart.md  reference.rst  seaplane.auth.rst  seaplane.config.rst  seaplane.locks.rst  seaplane.logging.rst  seaplane.metadata.rst  seaplane.restrict.rst
seaplane-sdk/python/src/seaplane/: __init__.py  configuration.py
seaplane-sdk/python/src/seaplane/api/: __init__.py  api_http.py  api_request.py  container_api.py  formation_api.py  formation_configuration_api.py  lock_api.py  metadata_api.py  restrict_api.py  token_api.py
seaplane-sdk/python/src/seaplane/model/: __init__.py  active_configuration.py  container.py  errors.py  flight.py  formation_configuration.py  formation_metadata.py  provider.py  region.py
seaplane-sdk/python/src/seaplane/util/: __init__.py  base64url.py
seaplane-sdk/python/src/seaplanekit/: configuration.py
seaplane-sdk/python/src/seaplanekit/api/: __init__.py  api_http.py  container_api.py  formation_api.py  token_api.py
seaplane-sdk/python/src/seaplanekit/logging/: __init__.py
seaplane-sdk/python/src/seaplanekit/model/: provider.py  region.py
seaplane-sdk/python/tests/: conftest.py  test_configuration.py  util.py
seaplane-sdk/python/tests/api/: test_formation_api.py  test_formation_configuration.py  test_locks_api.py  test_metadata_api.py  test_restrict_api.py  test_token_api.py
seaplane-sdk/python/tests/end_to_end/: __init__.py  e2e_locks_api.py  e2e_restrict_api.py
seaplane-sdk/python/tests/fixtures/api/: lena_in_base64.txt  seaplane_img_in_base64.txt
seaplane-sdk/python/tests/fixtures/metadata/: config.toml
seaplane-sdk/python/tests/model/metadata/: test_key_value.py
seaplane-sdk/rust/: Cargo.toml  README.md
seaplane-sdk/rust/src/: api.rs  base64.rs  error.rs  lib.rs  macros.rs
seaplane-sdk/rust/src/api/: compute.rs  error.rs  identity.rs  locks.rs  metadata.rs  request.rs  restrict.rs  shared.rs  token.rs  v1.rs
seaplane-sdk/rust/src/api/compute/: error.rs  v1.rs  v2.rs
seaplane-sdk/rust/src/api/identity/: token.rs  v0.rs
seaplane-sdk/rust/src/api/locks/: v1.rs
seaplane-sdk/rust/src/api/metadata/: v1.rs
seaplane-sdk/rust/src/api/restrict/: v1.rs
seaplane-sdk/rust/src/api/shared/: v1.rs
seaplane-sdk/rust/src/api/v1/: formations.rs  locks.rs  (+5 more)
seaplane-sdk/rust/tests/api/: compute_v1.rs  compute_v2.rs  formation_requests.rs  locks_requests.rs  metadata_requests.rs  mod.rs  restrict_requests.rs  token_requests.rs
seaplane/src/: api.rs  base64.rs  error.rs  lib.rs
seaplane/src/api/: token.rs  v1.rs
seaplane/src/api/v1/: config.rs  formations.rs  locks.rs  metadata.rs  range_query.rs
seaplane/tests/: formation_requests.rs  lib.rs
seaplane/tests/api/: config_requests.rs  formation_requests.rs  locks_requests.rs  metadata_requests.rs  mod.rs  token_requests.rs
(+133 files in other folders)
