[package]
name = "seaplane-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Seaplane IO, Inc."]

[lib]
name = "seaplane_cli"
path = "src/lib.rs"

[[bin]]
name = "seaplane"
path = "src/main.rs"

[dependencies]
atty = { version = "0.2.14", optional = true }
clap = { version = "3.1.2", default-features = false, features = ["std", "unicode", "cargo", "wrap_help", "env", "suggestions"] }
clap_complete = "3.0.6"
const_format = "0.2.22"
directories = "4.0.1"
hex = { version = "*", features = ["serde"]}
names = {version = "*", default-features = false}
once_cell = "1.9.0"
rand = "*"
seaplane = { path = "../seaplane" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.79"
strum = { version = "0.24.0", features = ["derive"] }
tabwriter = "1.1.2"
termcolor = { version = "1.1.2", optional = true }
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tempfile = "3.3.0"

[dev-dependencies]
trycmd = "0.13.2"
const_format = "0.2.22"

[build-dependencies]
const_format = "0.2.22"

[features]
default = ["color"]
color = ["clap/color", "termcolor", "atty"]
ui_tests = []
unstable = [] # Items which are in active development and are totally unstable or unimplemented
