[package]
name = "seaplane-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Seaplane IO, Inc."]

[lib]
name = "seaplane_cli"
path = "src/lib.rs"

[[bin]]
name = "seaplane"
path = "src/main.rs"

[dependencies]
atty = { version = "0.2.14", optional = true }
clap = { version = "3.1.8", default-features = false, features = ["std", "unicode", "cargo", "wrap_help", "env", "suggestions", "derive"] }
clap_complete = "3.0.6"
const_format = "0.2.22"
directories = "4.0.1"
hex = { version = "*", features = ["serde"]}
names = {version = "*", default-features = false}
once_cell = "1.9.0"
rand = "*"
seaplane = { path = "../seaplane-sdk/rust/" }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.79", features = ["preserve_order"] }
strum = { version = "0.24.0", features = ["derive"] }
tabwriter = "1.1.2"
termcolor = { version = "1.1.2", optional = true }
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tempfile = "3.3.0"
base64 = "0.13.0"
indicatif = "0.16.2"
reqwest = { version = "0.11.9", features = ["blocking", "json"]}

[dev-dependencies]
trycmd = "0.13.6"
const_format = "0.2.22"
httpmock = "0.6.6" #{path = "../../httpmock"}
serde_json = { version = "1.0.79", features = ["preserve_order"] }
wildmatch = "2.1.0"

[build-dependencies]
const_format = "0.2.22"

[features]
default = ["color"]
color = ["clap/color", "termcolor", "atty"]
api_tests = ["seaplane/api_tests"]
semantic_ui_tests = []
ui_tests = ["semantic_ui_tests"]
unstable = ["seaplane/unstable"] # Items which are in active development and are totally unstable or unimplemented
