[package]
name = "seaplane-cli"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["Seaplane IO, Inc."]
description = "The Seaplane Rust SDK"
documentation = "https://docs.rs/seaplane-cli"
repository = "https://github.com/seaplane-io/seaplane/tree/main/seaplane-cli"
homepage = "https://seaplane.io"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
  "share/*",
  "README.md",
]

[lib]
name = "seaplane_cli"
path = "src/lib.rs"

[[bin]]
name = "seaplane"
path = "src/main.rs"

[dependencies]
atty = { version = "0.2.14", optional = true }
base64 = "0.20.0"
clap = { version = "4.0.32", features = ["unicode", "cargo", "wrap_help", "env", "derive"] }
clap_complete = "4.0.7"
const_format = "0.2.22"
directories = "4.0.1"
hex = { version = "0.4.3", features = ["serde"]}
indicatif = "0.17.1"
names = { version = "0.14.0", default-features = false }
once_cell = "1.9.0"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["blocking", "json"]}
seaplane = "0.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.79", features = ["preserve_order"] }
stfu8 = "0.2.5"
strum = { version = "0.24.0", features = ["derive"] }
tabwriter = "1.1.2"
tempfile = "3.3.0"
termcolor = { version = "1.1.2", optional = true }
toml = "0.5.8"
unicode-segmentation = "1.9.0"
uuid = { version = "1.2.1", features = ["v4", "serde"] }

[dev-dependencies]
const_format = "0.2.22"
httpmock = "0.6.6"
serde_json = { version = "1.0.79", features = ["preserve_order"] }
trycmd = "0.14.0"
wildmatch = "2.1.0"

[build-dependencies]
const_format = "0.2.22"

[features]
default = ["color", "allow_insecure_urls", "allow_invalid_certs"]
color = ["clap/color", "termcolor", "atty"]
api_tests = ["seaplane/api_tests"]
semantic_ui_tests = []
allow_invalid_certs = ["seaplane/allow_invalid_certs"] # Allows opt-in invalid certs
allow_insecure_urls = ["seaplane/allow_insecure_urls"] # Allows opt-in HTTP endpoints instead of requing HTTPS
ui_tests = ["semantic_ui_tests"]
unstable = ["seaplane/unstable"] # Items which are in active development and are totally unstable or unimplemented
