[package]
name = "seaplane"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Seaplane IO, Inc."]

[dependencies]
nom = "7.1.0"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
base64 = "0.13.0"

[dev-dependencies]
httpmock = "0.6.6"
serde_json = "1.0.78"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
url = { version = "2.2.2", features = ["serde"] }

[features]
default = ["api_v1"]
api_v1 = []
api_tests = [] # enables mock API tests
unstable = [] # Items which are in active development and are totally unstable or unimplemented
