[package]
name = "seaplane-oid"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["Seaplane IO, Inc."]
description = "Seaplane Object IDs"
documentation = "https://docs.rs/seaplane-oid"
repository = "https://github.com/seaplane-io/seaplane/tree/main/crates/oid"
homepage = "https://seaplane.io"

[dependencies]
data-encoding = "2.3.3"
once_cell = "1.17.0"
serde = { version = "1.0.152", optional = true }
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v7"] }

[features]
default = []

[dev-dependencies]
wildmatch = "2.1.1"
