[package]
name = "seaplane"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Seaplane IO, Inc."]

[dependencies]
nom = "7.1.0"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
base64 = "0.13.0"
chrono = {version = "0.4.19", default-features = false, features = ["serde"] }
cfg-if = "1.0.0"

[dev-dependencies]
httpmock = "0.6.6"
serde_json = "1.0.78"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
url = { version = "2.2.2", features = ["serde"] }

[features]
default = ["compute_api_v1", "metadata_api_v1", "locks_api_v1", "restrict_api_v1"]
compute_api_v1 = []
metadata_api_v1 = []
locks_api_v1 = []
restrict_api_v1 = []
allow_insecure_urls = [] # Allows HTTP instead of requiring HTTPS (useful for testing/development)
api_tests = [] # enables mock API tests which enables insecure HTTP endpoints
unstable = [] # Items which are in active development and are totally unstable or unimplemented

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
