[package]
name = "seaplane"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["Seaplane IO, Inc."]
description = "The Seaplane Rust SDK"
documentation = "https://docs.rs/seaplane"
repository = "https://github.com/seaplane-io/seaplane/tree/main/seaplane-sdk/rust"
homepage = "https://seaplane.io"

[dependencies]
base64 = "0.20.0"
cfg-if = "1.0.0"
chrono = {version = "0.4.19", default-features = false, features = ["serde"] }
container-image-ref = { version = "0.1.0", path = "../../crates/container-image-ref/" }
nom = "7.1.0"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
seaplane-oid = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }

[dev-dependencies]
httpmock = "0.6.6"
serde_json = "1.0.78"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
url = { version = "2.2.2", features = ["serde"] }

[features]
default = ["compute_api_v1", "metadata_api_v1", "locks_api_v1", "restrict_api_v1", "identity_api_v0"]
compute_api_v1 = []
compute_api_v2 = []
metadata_api_v1 = []
locks_api_v1 = []
restrict_api_v1 = []
identity_api_v0 = []
danger_zone = ["allow_invalid_certs", "allow_insecure_urls"] # Turn on all the dangerous stuff
allow_invalid_certs = [] # Allows one to opt in to invalid HTTPS certs
allow_insecure_urls = [] # Allows one to opt in to HTTP instead of requiring HTTPS (useful for testing/development)
api_tests = [] # enables mock API tests which enables insecure HTTP endpoints
unstable = [] # Items which are in active development and are totally unstable or unimplemented

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
